# computer_vision

./: .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml  tbump.toml  tox.ini
.hooks/: pre-commit  pre-commit.legacy
computer_vision/: __init__.py  example.py
computer_vision/subpackage/: __init__.py  sub_example.py
docs/source/: conf.py  index.rst
notebooks/: computer_vision.ipynb
scripts/: __init__.py  main.py
tests/: __init__.py  helper.py  output.py  test_computer_vision.py
