[tool.poetry]
name = "computer_vision"
version = "0.1.0"
description = ""
authors = ["Alex Button"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pre-commit = "^2.20.0"
tbump = "^6.9.0"
mypy = "^1.2.0"
tox = "^4.5.1"
sphinx = ">=1.6,<7"
sphinx-rtd-theme = "^1.2.0"
python-docs-theme = "^2023.3.1"

[tool.poetry.dev-dependencies]
pytest = "<5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
